<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Better Reviewed</string>
    <string name="header">Which got better reviews?</string>
    <string name="movie1_placeholder">This movie</string>
    <string name="movie2_placeholder">That movie</string>
    <string name="action_settings">Settings</string>
    <string name="or">OR</string>


    <string name="pref_critic_weight">Critic rating weight</string>
    <string name="pref_critic_weight_summary">The amount that the critic rating factors into the overall rating</string>
    <string name="pref_user_weight">User rating weight</string>
    <string name="pref_user_weight_summary">The amount that the user rating factors into the overall rating</string>


</resources>