<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:id="@+id/">

    <TextView
        android:text="@string/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/header"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="39dp" />

    <AutoCompleteTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie1_placeholder"
        android:id="@+id/movie1_autocomplete"
        android:layout_below="@+id/header"
        android:layout_toRightOf="@+id/loader"
        android:layout_marginTop="35dp" />

    <AutoCompleteTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie2_placeholder"
        android:id="@+id/movie2_autocomplete"
        android:layout_marginTop="109dp"
        android:layout_below="@+id/movie1_autocomplete"
        android:layout_alignLeft="@+id/movie1_autocomplete"
        android:layout_alignStart="@+id/movie1_autocomplete" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/or"
        android:id="@+id/textView2"
        android:layout_marginTop="53dp"
        android:layout_below="@+id/movie1_autocomplete"
        android:layout_alignLeft="@+id/movie2_autocomplete"
        android:layout_alignStart="@+id/movie2_autocomplete"
        android:layout_marginLeft="23dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loader"
        android:src="@drawable/spinner_black_76"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="invisible" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/movie1_better"
        android:src="@drawable/btn_check_buttonless_on"
        android:layout_above="@+id/movie2_autocomplete"
        android:layout_alignRight="@+id/imageView"
        android:layout_alignEnd="@+id/imageView"
        android:visibility="invisible" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/movie2_better"
        android:src="@drawable/btn_check_buttonless_on"
        android:layout_alignBottom="@+id/movie2_autocomplete"
        android:layout_alignRight="@+id/imageView"
        android:layout_alignEnd="@+id/imageView"
        android:visibility="invisible" />

</RelativeLayout>
